force-app/main/default/objects/CIHI__c/CIHI__c.object-meta.xml
<CustomObject>
    <label>CIHI</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>CIHI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIHI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>