force-app/main/default/objects/CIHI__c/fields/Basic_Education_Institution_Code__c.field-meta.xml
<CustomField>
    <fullName>Basic_Education_Institution_Code__c</fullName>
    <formula>CA_Uni_of_Grad_for_Basic_Edu_in_Pharmacy__r.CIHI_Code__c</formula>
    <label>Basic Education Institution Code</label>
    <type>Text</type>
</CustomField>