force-app/main/default/objects/CIHI__c/fields/Basic_Education_University_Not_Present__c.field-meta.xml
<CustomField>
    <fullName>Basic_Education_University_Not_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Basic Education university not found in the system</description>
    <label>Basic Education University Not Present</label>
    <type>Checkbox</type>
</CustomField>