force-app/main/default/objects/CIHI__c/fields/CA_Uni_of_Grad_for_Basic_Edu_in_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>CA_Uni_of_Grad_for_Basic_Edu_in_Pharmacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basic Pharmacy Education Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI</relationshipLabel>
    <relationshipName>CIHI</relationshipName>
    <type>Lookup</type>
</CustomField>