force-app/main/default/objects/CIHI__c/fields/CA_University_of_Grad_Highest_Level__c.field-meta.xml
<CustomField>
    <fullName>CA_University_of_Grad_Highest_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Highest Level of  Education Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI (CA University of Grad Highest Level)</relationshipLabel>
    <relationshipName>CIHI_Highest_Level</relationshipName>
    <type>Lookup</type>
</CustomField>