force-app/main/default/objects/CIHI__c/fields/Concurrent_Reg_Province_Territory__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Reg_Province_Territory__c</fullName>
    <inlineHelpText>Any other Canadian province or territory that a provider is licensed in (for the same profession) at the time of renewal. Each provider may select up to 3 provinces/territories.</inlineHelpText>
    <label>Concurrent Reg Province/Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Province_State_Value_Set</valueSetName>
    </valueSet>
</CustomField>