force-app/main/default/objects/CIHI__c/fields/Concurrent_Registration_Country__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Registration_Country__c</fullName>
    <inlineHelpText>Any other country that a provider is licensed in (for the same profession) at the time of renewal. Each provider may select up to 3 countries.</inlineHelpText>
    <label>Concurrent Registration Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Country_Value_Set</valueSetName>
    </valueSet>
</CustomField>