force-app/main/default/objects/CIHI__c/fields/Country_of_Grad_for_Basic_Edu_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Grad_for_Basic_Edu_Pharmacy__c</fullName>
    <label>Basic Pharmacy Education Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Country_Value_Set</valueSetName>
    </valueSet>
</CustomField>