force-app/main/default/objects/CIHI__c/fields/Country_of_Grad_for_Highest_Level_of_Edu__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Grad_for_Highest_Level_of_Edu__c</fullName>
    <label>Highest Level of Education Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Country_Value_Set</valueSetName>
    </valueSet>
</CustomField>