force-app/main/default/objects/CIHI__c/fields/Country_of_Secondary_Employment__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Secondary_Employment__c</fullName>
    <label>Country of Secondary Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Country_Value_Set</valueSetName>
    </valueSet>
</CustomField>