force-app/main/default/objects/CIHI__c/fields/Date_of_Initial_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Registration__c</fullName>
    <label>Initial Licensure Date</label>
    <type>Date</type>
</CustomField>