force-app/main/default/objects/CIHI__c/fields/Employed_in_Profession__c.field-meta.xml
<CustomField>
    <fullName>Employed_in_Profession__c</fullName>
    <label>Employed in Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>