force-app/main/default/objects/CIHI__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>On leave from work</fullName>
            </value>
            <value>
                <fullName>On unpaid leave of absence</fullName>
            </value>
            <value>
                <fullName>On paid leave of absence</fullName>
            </value>
            <value>
                <fullName>On parental leave</fullName>
            </value>
            <value>
                <fullName>On maternity leave</fullName>
            </value>
            <value>
                <fullName>On paternity leave</fullName>
            </value>
            <value>
                <fullName>On short-term disability</fullName>
            </value>
            <value>
                <fullName>On long-term disability</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Retired because of age</fullName>
            </value>
            <value>
                <fullName>Retired because of disability</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>