force-app/main/default/objects/CIHI__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Primary Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
            <value>
                <fullName>Casual work</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>