force-app/main/default/objects/CIHI__c/fields/Employment_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type_Preference__c</fullName>
    <label>Primary Employment Type Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By choice</fullName>
            </value>
            <value>
                <fullName>Seeking full time</fullName>
            </value>
            <value>
                <fullName>Seeking part time</fullName>
            </value>
            <value>
                <fullName>Seeking casual</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>