force-app/main/default/objects/CIHI__c/fields/Highest_Education_Institution_Code__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Institution_Code__c</fullName>
    <formula>CA_University_of_Grad_Highest_Level__r.CIHI_Code__c</formula>
    <label>Highest Education Institution Code</label>
    <type>Text</type>
</CustomField>