force-app/main/default/objects/CIHI__c/fields/Highest_Education_Not_Found_Options__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Not_Found_Options__c</fullName>
    <label>Highest Education Not Found Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Collected</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>