force-app/main/default/objects/CIHI__c/fields/Highest_Education_University_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_University_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Highest Education University Not Found in the system</description>
    <label>Highest Education University Not Found</label>
    <type>Checkbox</type>
</CustomField>