force-app/main/default/objects/CIHI__c/fields/Highest_Level_Post_Basic_Edu_in_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_Post_Basic_Edu_in_Pharmacy__c</fullName>
    <label>Highest Level of Pharmacy Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Master’s</fullName>
            </value>
            <value>
                <fullName>Postgraduate-level profession-specific degree</fullName>
            </value>
            <value>
                <fullName>Residency</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Pharm D (upgrade from BSc)</fullName>
            </value>
            <value>
                <fullName>Baccalaureate</fullName>
                <isActive>false</isActive>
                <label>Baccalaureate</label>
            </value>
            <value>
                <fullName>Certificate</fullName>
                <isActive>false</isActive>
                <label>Certificate</label>
            </value>
            <value>
                <fullName>College or CEGEP diploma — complete</fullName>
                <isActive>false</isActive>
                <label>College or CEGEP diploma — complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>