force-app/main/default/objects/CIHI__c/fields/Indigenous_Identity_2__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Identity_2__c</fullName>
    <label>Indigenous Identity 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Nations</fullName>
            </value>
            <value>
                <fullName>Inuk/Inuit</fullName>
            </value>
            <value>
                <fullName>Métis</fullName>
            </value>
            <value>
                <fullName>Do not know</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>