force-app/main/default/objects/CIHI__c/fields/Level_of_Basic_Education_in_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Basic_Education_in_Pharmacy__c</fullName>
    <label>Basic Pharmacy Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baccalaureate</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>College or CEGEP diploma — complete</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Master’s</fullName>
            </value>
            <value>
                <fullName>Undergraduate PharmD</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>