force-app/main/default/objects/CIHI__c/fields/Location_of_Initial_Registration__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Initial_Registration__c</fullName>
    <label>Province Of Initial Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Province_State_Value_Set</valueSetName>
    </valueSet>
</CustomField>