force-app/main/default/objects/CIHI__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practicing Direct Patient Care</fullName>
            </value>
            <value>
                <fullName>Practicing Indirect Patient Care</fullName>
            </value>
            <value>
                <fullName>NonPracticing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>