force-app/main/default/objects/CIHI__c/fields/National_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>National_Unique_Identifier__c</fullName>
    <label>National  Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>