force-app/main/default/objects/CIHI__c/fields/Other_Canadian_Licences__c.field-meta.xml
<CustomField>
    <fullName>Other_Canadian_Licences__c</fullName>
    <label>Other Canadian Licences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>