force-app/main/default/objects/CIHI__c/fields/Postal_Code_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_of_Residence__c</fullName>
    <label>Postal Code of Residence</label>
    <length>7</length>
    <type>Text</type>
</CustomField>