force-app/main/default/objects/CIHI__c/fields/Postal_Code_of_Secondary_Employment__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_of_Secondary_Employment__c</fullName>
    <label>Postal Code of Secondary Employment</label>
    <length>7</length>
    <type>Text</type>
</CustomField>