force-app/main/default/objects/CIHI__c/fields/Primary_Emp_Patient_Interaction_Type_Two__c.field-meta.xml
<CustomField>
    <fullName>Primary_Emp_Patient_Interaction_Type_Two__c</fullName>
    <label>Primary Employer Patient Interaction 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_Patient_Interaction_Type_2</valueSetName>
    </valueSet>
</CustomField>