force-app/main/default/objects/CIHI__c/fields/Primary_Employer_by_Staffing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_by_Staffing_Agency__c</fullName>
    <label>Primary Employer by Staffing Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_by_Staffing_Agency</valueSetName>
    </valueSet>
</CustomField>