force-app/main/default/objects/CIHI__c/fields/Primary_Employer_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Funding_Source__c</fullName>
    <label>Primary Employer Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_Funding_Source</valueSetName>
    </valueSet>
</CustomField>