force-app/main/default/objects/CIHI__c/fields/Primary_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Employer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI (Primary Employer Name)</relationshipLabel>
    <relationshipName>Primary_Employer</relationshipName>
    <type>Lookup</type>
</CustomField>