force-app/main/default/objects/CIHI__c/fields/Primary_Employer_Organization_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Organization_Identifier__c</fullName>
    <label>Primary Employer Organization Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>