force-app/main/default/objects/CIHI__c/fields/Primary_Employer_Virtual_Care_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Virtual_Care_Amount__c</fullName>
    <label>Primary Employer Virtual Care Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Primary_Employer_Virtual_Care_Amt</valueSetName>
    </valueSet>
</CustomField>