force-app/main/default/objects/CIHI__c/fields/Primary_Employment_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employment_Category__c</fullName>
    <label>Primary Employment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employment_Category</valueSetName>
    </valueSet>
</CustomField>